--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -51,12 +51,16 @@
 				
 					<label for="name">Name</label>
 					<input type="text" name="name" th:field="*{name}" th:value="li."/>
+					
+					<p th:if="${#fields.hasErrors('name')}">Please enter your name.</p>
 				
 					<label for="email">E-mail</label>
 					<input type="text" name="email" th:field="*{email}" />
+					<p th:if="${#fields.hasErrors('email')}">Please enter a valid E-mail.</p>
 				
 					<label for="feedback">Feedback</label>
 					<textarea name="feedback" rows="4" cols="30" th:field="*{feedback}"></textarea>
+					<p th:if="${#fields.hasErrors('feedback')}">Feedback cannot be empty or greater then 2000 symbols.</p>
 				
 					<label for="Password">I agree with spam</label> 
 					<input name="isSpamAgreed" type="checkbox" th:field="*{isSpamAgreed}" />
