Image filename update

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,7 +45,7 @@
 		</div>
   
     	<div tiles:fragment="content">
-         	<img src="Key.png" />  
+         	<img src="key.png" />  
         	<form name="f" id="form" th:action="@{/login}" method="post">             
             	<fieldset>
                 	<label for="username">Username</label>
