CSS update: 1. add styled to feedback alerts, 2. update buttons styles

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -72,7 +72,7 @@
       							<input hidden="true" id="hidden" name="id" th:value="${test.id}" />
       							<input 
       								type="submit" 
-      								class="btna"
+      								class="btn btnf btnd"
       								value="Delete" 
       								onClick="return confirm('You are about to delete a Feedback.\nAre you sure?')"/>
 							</form>
