--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -49,7 +49,6 @@ label {
 	font-family: Arial;
 	font-size: 16px;
 	font-weight: bold;
-	margin-top: 90px;
 }
 
 .alert-error {
@@ -58,6 +57,10 @@ label {
 
 .alert-success {
 	color: #333;
+}
+
+.alert-login {
+	font-size: 14px;
 }
 
 input[type=text], input[type=password] {
@@ -168,6 +171,8 @@ img {
 	-webkit-border-radius: 20;
 	-moz-border-radius: 20;
 	border-radius: 20px;
+	-webkit-box-shadow: 0px 1px 3px #666666;
+  	-moz-box-shadow: 0px 1px 3px #666666;
 	box-shadow: 0px 1px 3px #666666;
 	font-family: Arial;
 	color: #ffffff;
@@ -191,65 +196,27 @@ img {
 	text-decoration: none;
 }
 
-.btnc {
-	background: #3498db;
-	background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-	background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-	background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-	background-image: -o-linear-gradient(top, #3498db, #2980b9);
-	background-image: linear-gradient(to bottom, #3498db, #2980b9);
-	-webkit-border-radius: 20;
-	-moz-border-radius: 20;
+.btnf {
+	-webkit-border-radius: 10;
+	-moz-border-radius: 10;
 	border-radius: 10px;
-	box-shadow: 0px 1px 3px #666666;
-	font-family: Arial;
-	color: #ffffff;
 	font-size: 12px;
 	padding: 5px 0px 5px 0px;
-	text-align: center;
-	text-decoration: none;
 	margin: 15px;
 	width: 100px;
-	text-decoration:inline-block;
-	outline: 0;
 }
 
-.btnc:hover {
-	background: #3cb0fd;
-	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-	text-decoration: none;
-}
-
-.btna {
+.btnd {
   	background: #ebaf36;
   	background-image: -webkit-linear-gradient(top, #ebaf36, #d98507);
   	background-image: -moz-linear-gradient(top, #ebaf36, #d98507);
   	background-image: -ms-linear-gradient(top, #ebaf36, #d98507);
   	background-image: -o-linear-gradient(top, #ebaf36, #d98507);
   	background-image: linear-gradient(to bottom, #ebaf36, #d98507);
-  	-webkit-border-radius: 28;
-  	-moz-border-radius: 28;
-  	border-radius: 10px;
-  	-webkit-box-shadow: 0px 1px 3px #666666;
-  	-moz-box-shadow: 0px 1px 3px #666666;
-  	box-shadow: 0px 1px 3px #666666;
-  	font-family: Arial;
-  	color: #ffffff;
-  	font-size: 12px;
-	padding: 5px 0px 5px 0px;
-	text-align: center;
-	text-decoration: none;
-	margin: 5px;
-	width: 100px;
-	text-decoration:inline-block;
-	outline: 0;
+  	margin: 5px;
 }
 
-.btna:hover {
+.btnd:hover {
   	background: #fcdc3c;
   	background-image: -webkit-linear-gradient(top, #fcdc3c, #d99c34);
   	background-image: -moz-linear-gradient(top, #fcdc3c, #d99c34);
