alert styles update

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -60,8 +60,13 @@ label {
 }
 
 .alert-login {
+	margin-top: 90px;
+}
+
+.alert-fb {
 	font-size: 14px;
 }
+
 
 input[type=text], input[type=password] {
     height: 20px;
